--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^7.1.0",
+    "@stripe/stripe-js": "^8.5.3",
     "bcryptjs": "^3.0.3",
     "dotenv": "^17.2.3",
     "next": "16.0.8",
