--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcryptjs": "^3.0.3",
     "dotenv": "^17.2.3",
     "next": "16.0.8",
+    "node-mailjet": "^6.0.11",
     "pg": "^8.16.3",
     "qrcode.react": "^4.2.0",
     "react": "19.2.1",
